--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <img src="{{ url_for('static', filename='images/Logo.png') }}" alt="MelHad Logo">
+        <img src="{{ url_for('static', filename='frontend/scr/assets/images/logo.png') }}" alt="MelHad Logo">
         <h1>Welcome to MelHad Investment- E-Commerce Platform</h1>
         <nav>
             <a href="#about">About</a>
